Fix year not showing up in copyright, make some changes to the style

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,7 +4,6 @@ header {
 	box-shadow: 0px 2px 12px 0px rgba(0,0,0,0.5);
 }
 footer {
-	margin-bottom: 0;
 	font-size: .9em;
 	text-align: center;
 	font-style: italic;
